# Fly-in

./: .gitignore  Makefile  Map.py  README.md  error.py  graph.py  layout.py  main.py  main1.py  models.py  pyproject.toml  renderer.py  solver.py  test.py  visualizer.py
maps/easy/: 01_linear_path.txt
maps/hard/: 03_ultimate_challenge.txt
models/: Map.py  Zone.py  __init__.py  layout.py  map.py  renderer.py  renderer1.py  solver.py  solver1.py  zone.py
src/: __init__.py
src/parser/: error.py  map.py  zone.py
src/solver/: graph.py  solver.py
src/visualizer/: layout.py  renderer.py
